log
Sun, Mar 23, 2025 10:47:12 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:7: error: expected expression before 'int'
       int* numero = (int*) malloc(sizeof(int));
       ^~~
exercises.c:46:4: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
    for(int i = 0; i<10 ;i++)
    ^~~
exercises.c:48:7: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
       pushback(L, numero);
       ^~~~~~~~
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
exercises.c:48:19: error: 'numero' undeclared (first use in this function)
       pushback(L, numero);
                   ^~~~~~
exercises.c:48:19: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
0a59142
Sun, Mar 23, 2025 10:48:32 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
       pushback(L, numero);
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d90e56c
Sun, Mar 23, 2025 10:49:21 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:7: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
       pushback(L, numero);
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2f969b8
Sun, Mar 23, 2025 10:54:33 PM: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
644622e
Sun, Mar 23, 2025 10:59:15 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
8e02599
Sun, Mar 23, 2025 11:01:21 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
fe80575
